--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ sketches/fits/fit3.lai2016vivid.rds
 
 sketches/fits/fit3.lai2016.rds
 sketches/fits/fit4.lai2016.rds
+sketches/fits/fit4.coyne2022.rds
 
